Closed
Bug 425157
Opened 17 years ago
Closed 17 years ago
Crash when closing popup window containing Quicktime plugin
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9
People
(Reporter: dev, Assigned: MatsPalmgren_bugz)
References
()
Details
(4 keywords)
Attachments
(1 file, 1 obsolete file)
1.69 KB,
patch
|
jst
:
review+
jst
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
Build identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b5pre) Gecko/2008032504 Minefield/3.0b5pre
When closing the "tutorial video" popup window in the Antares website, Firefox immediately crashes. This happens every time.
Steps to reproduce:
1. Go to http://www.antarestech.com/products/auto-tune5.shtml
2. Find the "Welcome to Auto-Tune" link under the Tutorial Videos section.
3. Click on any of the 2 videos, and wait a moment until a small portion of the QuickTime movie loads.
4. Close the popup window
Expected result:
Firefox should close the popup window and NOT crash.
Actual result:
Firefox closes the window, hangs for a short while (you can see "javascript:void(0);" in the status bar text area) and then crashes.
Flags: blocking-firefox3?
Assignee | ||
Comment 1•17 years ago
|
||
Regression range: 2008-03-13-04 -- 2008-03-14-04
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-03-13+03%3A00&maxdate=2008-03-14+05%3A00&cvsroot=%2Fcvsroot
Most likely bug 416953.
Build 2008032504 does not have the fix for bug 420886 (will be in 2008032604)
but my local test builds that do have it also crash.
Component: General → Plug-ins
Flags: blocking-firefox3?
Keywords: crash,
regression
Product: Firefox → Core
QA Contact: general → plugins
Summary: Firefox crashes when closing popup window → Crash when closing popup window containing Quicktime plugin
Target Milestone: --- → mozilla1.9
Assignee | ||
Updated•17 years ago
|
Flags: blocking1.9?
Assignee | ||
Comment 2•17 years ago
|
||
I tried various schemes to delay the different parts of DoStopPlugin()
(CallSetWindow/SetWindow/Stop/Destroy) but all variations I tried caused
some regression for other plugins...
This patch seems to work as a wallpaper if we can't find a better solution...
Comment 3•17 years ago
|
||
Yes, blocking1.9+. This is a regression from another blocking crash patch.
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Assignee | ||
Updated•17 years ago
|
Attachment #311815 -
Flags: superreview?(jst)
Attachment #311815 -
Flags: review?(jst)
Comment 6•17 years ago
|
||
Comment on attachment 311815 [details] [diff] [review]
wallpaper
if (aDelayedStop) {
+ if (strcmp(::GetMIMEType(inst), "video/quicktime") == 0) {
+ // XXX wallpaper bug 425157
+ inst->Stop();
+ }
nsCOMPtr<nsIRunnable> evt = new nsStopPluginRunnable(aInstanceOwner);
NS_DispatchToCurrentThread(evt);
Any real reason to dispatch the runnable here if we're already stopping the plugin? Seems like we might as well just stop this plugin early no matter what and don't even bother with the runnable etc. Or am I missing something here?
Comment 7•17 years ago
|
||
Mats, can you look at my previous comment?
Updated•17 years ago
|
Whiteboard: [needs review jst
Comment 9•17 years ago
|
||
Mats, ping.
Comment 10•17 years ago
|
||
Note: as per Bug 427888 this crash affects also the TV-on-Demand Section of one the biggest German National TV Station. Every time i close Firefox with the TV-on-Demand Window i crash.
Keywords: topcrash
Updated•17 years ago
|
Whiteboard: [needs review jst → [needs review jst]
Assignee | ||
Comment 11•17 years ago
|
||
(In reply to comment #6)
> Any real reason to dispatch the runnable here if we're already stopping the
> plugin? Seems like we might as well just stop this plugin early no matter what
> and don't even bother with the runnable etc. Or am I missing something here?
I'm testing that, new patch in a bit if it works...
Assignee | ||
Comment 12•17 years ago
|
||
That seems to work just as well. Tested on both MacOSX and Windows XP.
(None of the crashes occurs on XP in the first place, just verifying it
still works.)
Attachment #311815 -
Attachment is obsolete: true
Attachment #315367 -
Flags: superreview?(jst)
Attachment #315367 -
Flags: review?(jst)
Attachment #311815 -
Flags: superreview?(jst)
Attachment #311815 -
Flags: review?(jst)
Updated•17 years ago
|
Attachment #315367 -
Flags: superreview?(jst)
Attachment #315367 -
Flags: superreview+
Attachment #315367 -
Flags: review?(jst)
Attachment #315367 -
Flags: review+
Assignee | ||
Updated•17 years ago
|
Attachment #315367 -
Flags: approval1.9?
Comment 13•17 years ago
|
||
This seems very similar to bug 426524, is it possible a similar issue occurs with Flip4Mac on non QuickTime movies?
Assignee | ||
Comment 14•17 years ago
|
||
Yeah, it seems so. I'll post a wallpaper on that bug in a bit, with a
MozillaTry build for people to test (I only tested the URL in that bug briefly).
Comment 15•17 years ago
|
||
Comment on attachment 315367 [details] [diff] [review]
v2
a1.9=beltzner
Attachment #315367 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 16•17 years ago
|
||
mozilla/layout/generic/nsObjectFrame.cpp 1.650
-> FIXED
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [needs review jst]
Comment 18•17 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008050621 Firefox/3.0pre - no crash on steps to reproduce.
--> Verified fixed
Status: RESOLVED → VERIFIED
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•