Don't delay stopping the Quicktime plugin. b=425157 r+sr=jst a1.9=beltzner